--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
       .video {
       /* Internal borders have 1px width, thus need to add 4 x 1px to 120px. */
       height: 124px;
-      }
       line-height: 124px;
       }
       .thermometer, .order, .social {
@@ -73,6 +72,11 @@
 	  <div class="order">
 	    Order
 	    </div>
+	  <div class="social">
+	    Social
+	    </div>
+	  </div>
+	</div>
 	  <div class="row section1">
 	    <div class="span12">
 	      Marketing Section 1
@@ -83,7 +87,7 @@
 	      Marketing Section 2
 	      </div>
 	    </div>
-	  <div class="row faw">
+	  <div class="row faq">
 	    <div class="span12">
 	      FAQ
 	      </div>
